--- a/static/css/consume.css
+++ b/static/css/consume.css
@@ -1,13 +1,14 @@
 .con-container ul li{
     padding: 0.3rem;
+    position: relative;
     background: #fff;
-    border-top: 1px solid #f1f1f1;
-    border-bottom: 1px solid #f1f1f1;
+    border-top: 1px solid #e1e1e1;
+    border-bottom: 1px solid #e1e1e1;
 }
 .con-xiao{
     background: #4397f7;
     border-radius: 2px;
-    padding: 1px 2px;
+    padding: 0px 3px;
     font-size: 0.2rem;
     font-style: normal;
     color: #fff;
@@ -25,21 +26,25 @@
     clear: both;
 }
 .con-listtop p{
-    font-size: 0.32rem;
+    font-size: 0.34rem;
     float: left;
+    max-width: 3.4rem;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
 .con-listtop span{
     float: right;
-    color: #999;
+    color: #8e8e93;
 }
 .show-info {
-  margin-top: 0.16rem;
-  display: flex;
-  align-items: center;
+    margin-top: 0.16rem;
+    display: flex;
+    align-items: center;
 }
 .show-info .progress {
-  margin-right: 0.1rem;
-  width: 100%;
+    margin-right: 0.1rem;
+    width: 100%;
 }
 .con-flex{
     display: flex;
@@ -49,8 +54,8 @@
     flex: 1;
 }
 .con-flex span{
-    color: #999;
-    font-size: 0.26rem;
+    color: #8e8e93;
+    font-size: 0.31rem;
 }
 .con-flexleft b{
     display: block;
@@ -60,7 +65,7 @@
 }
 .con-flexleft b i{
     font-style: normal;
-    font-size: 0.3rem;
+    font-size: 0.31rem;
 }
 .con-flexcenter{
     padding-top: 0.22rem;
@@ -74,14 +79,149 @@
     padding-top: 0.25rem;
 }
 .con-flexright a,.con-flexright a:active{
-    width: 2rem;
-    height: 0.8rem;
-    line-height: 0.8rem;
+    width: 1.9rem;
+    height: 0.75rem;
+    line-height: 0.75rem;
     border: none;
+    margin-top: 0.2rem;
+    border-radius: 6px;
     float: right;
-    background: #f80!important;
+    background: #ff6c00!important;
 }
 .con-flexright a span{
     color: #fff;
-    font-size: 0.3rem;
+    font-size: 0.34rem;
+}
+.con-container .stoped .con-listtop {
+    color: #999;
+}
+.con-container .stoped .con-listtop span {
+    display: none;
+}
+.con-container .stoped .con-xiao {
+    background: #c3c3c3;
+}
+.con-container .stoped .show-info {
+    display: none;
+}
+.disnone{
+    display: none;
+}
+.con-container .stoped .disnone{
+    display: block;
+    flex: 1.4;
+}
+.con-container .stoped .disblock{
+    display: none;
+}
+.stoped:after {
+    content: " ";
+    display: block;
+    width: 1.5rem;
+    height: 1.5rem;
+    position: absolute;
+    background: url('../imgs/buy-none.png') no-repeat center;
+    background-size: cover;
+    right: 0.3rem;
+    margin-right: -2px;
+    top: 10%;
+    border-radius: 50%;
+}
+
+
+.am-navbar{
+    height: 1rem!important;
+}
+.am-list-body{
+    border-top: none!important;
+    margin-top: 0.2rem;
+}
+.am-list-footer{
+    padding: 0!important;
+}
+.am-progress-outer{
+    color: #ccc;
+    border-radius: 5px;
+}
+.am-progress-bar{
+    border-radius: 5px;
+}
+
+.info-contant{
+    background: #fff;
+    padding: 0.3rem;
+    margin-top: 0.2rem
+}
+.info-top{
+    border-bottom: 1px solid #e2e2e2;
+    display: table;
+    width: 100%;
+    padding-bottom: 0.2rem;
+}
+.info-top h3{
+    display: table-cell;
+    height: 100%;
+    width: 80%;
+    border-collapse: separate;
+    font-size: 18px!important;
+    font-family: "Microsoft YaHei";
+    font-weight: 300;
+}
+.info-top p{
+    display: table-cell;
+    height: 100%;
+    text-align: right;
+    border-collapse: separate;
+    font-size: 18px!important;
+    font-family: "Microsoft YaHei";
+    font-weight: 300;
+}
+.info-top p b{
+    padding: 0.1rem 0.15rem;
+    font-size: 0.25rem;
+    color: #fff;
+    background: #4397f7;
+    border-radius: 3px;
+}
+.info-bottom{
+    margin-top: 0.3rem;
+}
+.info-bottom ul li{
+    font-weight: 300;
+    line-height: 0.6rem;
+}
+.info-bottom p{
+    font-size: 0.31rem;
+}
+.info-bottom p i{
+    font-style: normal;
+}
+.tabel-cell{
+    display: table;
+    width: 100%;
+}
+.tabel-cell b{
+    display: table-cell;
+    border-collapse: separate;
+    width: 1.2rem;
+    height: 100%;
+}
+
+.det-info{
+    width: 100%;
+}
+.table-cell{
+    display: table;
+    width: 100%;
+}
+.det-info .table-cell > div{
+    display: table-cell;
+
+}
+.det-info .table-cell .progress{
+    width: 90%;
+}
+.det-info .table-cell .am-progress-bar{
+    height: 10px;
+    border: .1rem solid #108ee9;
 }
