--- a/static/css/public.css
+++ b/static/css/public.css
@@ -14,6 +14,7 @@ body,html{
     height:100%;
     width:100%;
     position:relative;
+    overflow: hidden;
 }
 body,dd,dl,h1,h2,h3,h4,h5,h6,p{
     margin:0;
@@ -60,11 +61,26 @@ a{
     display:inline-block;
     cursor:pointer;
 }
+.show{
+    display: inline-block;
+}
+.hide{
+    display: none;
+}
+.redbg {
+    background: #ff7228!important;
+}
 ol,ul{
     list-style:none;
 }
+.grey{
+    color: #666;
+}
 .red{
     color: #f00;
+}
+.fz02{
+    font-size: 0.2rem;
 }
 .fs15{
     font-size: 0.5rem;
