--- a/static/css/cnode.scss
+++ b/static/css/cnode.scss
@@ -1,3 +1,6 @@
+.cnodeHeight{
+    margin-top: 0.2rem;
+}
 .cnode-container{
     min-height: 100%;
     ul{
@@ -34,10 +37,6 @@
             }
         }
     }
-}
-.am-list-body{
-    margin-top: 0.2rem;
-    border-top: none!important;
 }
 .am-navbar-light{
     border-bottom: 1px solid #108ee9;
@@ -163,6 +162,11 @@
             }
             div.cnode-dis{
                 margin-left: 0.2rem;
+                img{
+                    width: 100%;
+                    height: auto;
+                    border-radius: 0;
+                }
             }
             .markdown-text{
                 padding: 0;
@@ -177,4 +181,35 @@
 }
 table{
     word-break: break-all;
+}
+.none{
+    display:  none;
+}
+.display{
+    display: block;
+}
+.cnode-padding{
+    padding: 0.3rem;
+}
+.cnode-usertop{
+    background: #fff;
+    text-align: center;
+    padding: 0.5rem 0;
+    img{
+        width: 1.2rem;
+        height: 1.2rem;
+        border-radius: 50%;
+    }
+}
+.cnode-grid{
+    margin-top: 0.3rem;
+}
+.new-topic{
+    .am-list-header{
+        padding-top: 0.2rem;
+    }
+    .am-list-body{
+        margin-top: 0;
+        border-top: 1px solid #ddd!important;
+    }
 }
